<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingInFragment">

    <TextView
        android:id="@+id/registr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vhod"
        android:textSize="38sp"
        android:textColor="@color/blu"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/vvlogin"
        app:layout_constraintTop_toBottomOf="@id/registr1"/>

    <EditText
        android:id="@+id/edPassw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/vvpass"
        app:layout_constraintTop_toBottomOf="@id/edLog"/>

    <Button
        android:id="@+id/butVhod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:text="@string/vihod"
        android:textSize="20sp"
        android:background="@drawable/bg_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>